--- a/src/main/resources/templates/task_view.html
+++ b/src/main/resources/templates/task_view.html
@@ -210,18 +210,27 @@
       <p sec:authorize="!hasAuthority('developer')" th:if="${logedInUserID != task.getCreator().getId()}">You cannot bid because you are not a developer</p>
     </div>
     <div class="leftContent" style=" font-size: 20px; text-align: left; margin-left: 15px; ">
-      <h3 style=" font-size: 25px; " th:text="${task.getTitle()}">Title</h3>
-
-      <div style=" height: 5rem; width: 5rem; border-radius: 50%; display: inline-block;">
-        <div class="menu">
-          <img th:src="@{{path}(path=${task.getCreator()?.getPhotosImagePath()})}" src="../static/images/Default%20Profile%20Image.png" class="real_photo" style=" height: 5rem; display: inline-block; "/>
-          <span class="menu_label">
-            <ion-icon id="camera_icon" name="camera-outline" style=" margin-top: -500px; font-size: 30px; color: rgba(0, 0, 0, 0);"></ion-icon>
-          </span>
+      <div>
+        <h3 style=" font-size: 25px; " th:text="${task.getTitle()}">Title</h3>
+        <div sec:authorize="hasAuthority('developer')" style=" margin-left: 50px; margin-top: -20px; margin-bottom: 30px; ">
+          <div class="tooltip">
+            <a th:href="@{/users/user_search/forward/{taskId}(taskId=${task.getId()})}"><ion-icon style=" cursor: pointer; font-size: 21px; " name="return-up-forward-outline"></ion-icon></a>
+            <span class="tooltiptext" style="font-size: 15px;">Forward task</span>
+          </div>
+        </div>
+        <div th:if="${logedInUserID == task.getCreator().getId()}" style=" margin-left: 50px; margin-top: -20px; margin-bottom: 30px; ">
+          <div class="tooltip">
+            <a th:href="@{/users/user_search/forward/{taskId}(taskId=${task.getId()})}"><ion-icon style=" cursor: pointer; font-size: 21px; " name="return-up-forward-outline"></ion-icon></a>
+            <span class="tooltiptext" style="font-size: 15px;">Forward task</span>
+          </div>
         </div>
       </div>
 
-      <a th:href="@{/users/profile_view/{id}(id=${task.getCreator()?.getId()})}" href="#"><h5 th:text="${task.getCreator()?.getUsername()}" style=" margin: -45px 0px 50px 85px; ">thisIsAUsername</h5></a>
+      <div style=" height: 5rem; width: 5rem; border-radius: 50%; display: inline-block;">
+          <img th:src="@{{path}(path=${task.getCreator()?.getPhotosImagePath()})}" src="../static/images/Default%20Profile%20Image.png" class="real_photo" style=" height: 5rem; display: inline-block; "/>
+      </div>
+
+      <a th:href="@{/users/profile_view/{id}(id=${task.getCreator()?.getId()})}" href="#"><p th:text="${task.getCreator()?.getUsername()}" style=" margin: -45px 0px 50px 85px; ">thisIsAUsername</p></a>
       <h4>About this task</h4>
       <p style=" text-align: justify; " th:text="${task.getDescription()}">Description</p>
       <p th:text="'category: ' + ${task.getCategory().getName()}">category: app</p>
@@ -236,13 +245,7 @@
 
   <div th:if="${task.showPrice}" style=" margin: 25px 20px 0px 20px; font-size: 15px; color: #ffffff" th:each="offer, iterStat: ${offers}">
     <div style=" height: 4.5rem; width: 4.5rem; border-radius: 50%; display: inline-block;">
-      <div class="menu">
-        <img th:src="@{{path}(path=${offer.getBidder()?.getPhotosImagePath()})}" src="../static/images/Default%20Profile%20Image.png" class="real_photo"
-             style=" height: 5rem; display: inline-block; "/>
-        <span class="menu_label">
-          <ion-icon id="camera_icon" name="camera-outline" style=" margin-top: -500px; font-size: 30px; color: rgba(0, 0, 0, 0);"></ion-icon>
-        </span>
-      </div>
+        <img th:src="@{{path}(path=${offer.getBidder()?.getPhotosImagePath()})}" src="../static/images/Default%20Profile%20Image.png" class="real_photo" style=" height: 5rem; display: inline-block; "/>
     </div>
 
     <p style=" margin: -60px 0px 50px 95px; " th:text="${offer.getBidder()?.getUsername()}">thisIsAnotherUsername</p>
@@ -267,17 +270,12 @@
     <div style="margin-left: 15px;">
 
       <div style=" height: 6rem; width: 6rem; border-radius: 50%; display: inline-block;">
-        <div class="menu">
           <img th:src="@{{path}(path=${comment.getCommenter()?.getPhotosImagePath()})}" src="../static/images/Default%20Profile%20Image.png" class="real_photo" style=" height: 6rem; display: inline-block; "/>
-          <span class="menu_label">
-            <ion-icon id="camera_icon" name="camera-outline" style=" margin-top: -500px; font-size: 30px; color: rgba(0, 0, 0, 0);"></ion-icon>
-          </span>
-        </div>
       </div>
 
       <p style=" margin: -75px 0px 50px 105px; " th:text="${comment.getCommenter()?.getUsername()}">totallyLegitUser</p>
       <p style=" margin: -50px 0px 50px 105px; " th:text="${comment.getHowLongAgo()}">2 months ago</p>
-      <p style=" margin: -15px 15px 20px 15px; overflow-wrap: break-word; overflow: auto; " th:text="${comment.getComment()}">This is a comment about this user. He was mediocre at best...</p>
+      <p style=" margin: -15px 15px 20px 15px; overflow-wrap: break-word; overflow: auto; " th:text="${comment.getComment()}">This is a comment about this task</p>
     </div>
     <hr class="horizontal_line">
   </div>
