--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -11,6 +11,7 @@
 <body>
 
 <div id="navbar-top" class="navbar-top" th:fragment="navbar_top(logedInUsername, logedInUserID, notifications)">
+    <div id="pageMessages"></div>
   <div style=" font-size: 25px; ">
     <div style=" padding-top: 25px; margin-left: 10px; ">
       <a class="icon" href="https://github.com/"><ion-icon name="logo-github"></ion-icon></a>
