--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,6 +4,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>Login / Register</title>
 
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
+
   <link rel="stylesheet" th:href="@{/css/application.css}" href="../static/css/application.css"/>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
@@ -169,6 +171,8 @@
 </head>
 <body>
 
+<div id="pageMessages"></div>
+
 <div class="background">
   <div class="shape"></div>
   <div class="shape"></div>
@@ -177,6 +181,7 @@
 <div style=" margin-top: 25px; " th:hidden="${isLoginHidden}">
   <form id="login_form" action="#" th:action="@{/users/login}" method="post" th:object="${newUser}">
     <h3>Login Here</h3>
+    <p th:if="${loginError}" class="other_action" style=" font-size: 18px; text-decoration: none; color: red; margin-top: -25px; margin-bottom: -25px; ">Wrong username or password</p>
 
     <label for="username">Username</label>
     <input type="text" placeholder="Username" id="username" th:field="*{username}" name="username" maxlength="15" th:maxlength="15" required/>
@@ -188,14 +193,13 @@
       <button type="submit" id="login_button">Log In</button>
     </div>
     <a class="other_action" th:href="@{/users/register}"><span>Register</span></a>
-
-    <p th:if="${loginError}" class="other_action" style=" font-size: 18px; text-decoration: none; color: red; ">Wrong username or password</p>
   </form>
 </div>
 
 <div style=" margin-top: 25px; " th:hidden="${isRegisterHidden}" hidden>
-  <form id="register_form" action="#" th:action="@{/users/register}" method="post" th:object="${newUser}">
+  <form id="register_form" name="register_form" th:action="@{/users/register}" method="post" th:object="${newUser}">
     <h3 style=" margin-top: -5px; ">Register Here</h3>
+    <p th:if="${registrationError != null and registrationError}" class="other_action" style=" font-size: 18px; text-decoration: none; color: red; margin-top: -25px; margin-bottom: -25px; " th:text="${registrationErrorMessage}">Wrong username or password</p>
 
     <label for="register_username">Username</label>
     <input type="text" placeholder="Username" id="register_username" th:field="*{username}" name="username" maxlength="15" th:maxlength="15" required/>
@@ -226,8 +230,11 @@
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
-<script>
+<script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script><script  src="./script.js"></script>
+<script th:src="@{/js/application.js}" src="../static/js/application.js"></script>
 
+<script>
   // check if one or both roles are selected (checkmarks)
   document.addEventListener('DOMContentLoaded', function() {
     const inputs = Array.from(
@@ -242,6 +249,31 @@
 
     inputs.forEach(i => i.addEventListener('input', inputListener));
   });
+
+  const validateEmail = (email) => {
+    return email.match(
+            /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/
+    );
+  };
+
+  const validate = () => {
+    const email = $('#register_email').val();
+
+    if(validateEmail(email)){
+      $result.text(email + ' is valid.');
+      $result.css('color', 'green');
+    } else{
+      $result.text(email + ' is invalid.');
+      $result.css('color', 'red');
+    }
+    return false;
+  }
+
+  $('#register_email').on('input', validate);
+</script>
+
+<script th:if="${hasRegistered != null and hasRegistered}">
+  window.onload = (event) => {createAlert('', 'Successful Registration!', 'Welcome to the CodeTask family.', 'success', true, true, 'pageMessages');}
 </script>
 
 </body>
