--- a/src/main/resources/templates/notifications.html
+++ b/src/main/resources/templates/notifications.html
@@ -5,6 +5,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>Notifications</title>
 
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
+
   <link rel="stylesheet" th:href="@{/css/application.css}" href="../static/css/application.css"/>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
@@ -35,6 +37,13 @@
       -ms-user-select: none; /* IE 10 and IE 11 */
       user-select: none; /* Standard syntax */
     }
+
+    .icons {
+      transition: all .2s ease-in-out;
+    }
+    .icons:hover {
+      transform: scale(1.2);
+    }
   </style>
 </head>
 <body>
@@ -55,17 +64,17 @@
               <div>
                 <p th:utext="${notification.getDescription()}">Description</p>
                 <div th:if="${notification.getIsDeletable()}" class="tooltip" style=" position: relative; left: 93%; margin-top: -10px;">
-                  <a th:href="@{/users/profile_view/notifications/{userId}/delete/{notificationId}(userId=${logedInUserID}, notificationId=${notification.getId()})}" style=" color: #222222; font-size: 30px; cursor: pointer; "><ion-icon name="trash-outline"></ion-icon></a>
+                  <a th:href="@{/users/profile_view/notifications/{userId}/delete/{notificationId}(userId=${logedInUserID}, notificationId=${notification.getId()})}" style=" color: #222222; font-size: 30px; cursor: pointer; "><ion-icon class="icons" name="trash-outline"></ion-icon></a>
                   <span class="tooltiptext">Delete Notification</span>
                 </div>
                 <div th:if="${!notification.getIsDeletable() and notification.getIsHireRequest()}" style=" float: right; margin-top: -10px; color: #222222; font-size: 30px;">
                   <div class="tooltip">
-                    <a th:href="@{/task_view/{taskId}/accept_hire/{userId}/{notificationId}(taskId=${notification.getTask()?.getId()}, userId=${notification.getRecipient()?.getId()}, notificationId=${notification.getId()})}"><ion-icon style=" cursor: pointer; " name="checkmark-outline"></ion-icon></a>
+                    <a th:href="@{/task_view/{taskId}/accept_hire/{userId}/{notificationId}(taskId=${notification.getTask()?.getId()}, userId=${notification.getRecipient()?.getId()}, notificationId=${notification.getId()})}"><ion-icon class="icons" style=" cursor: pointer; " name="checkmark-outline"></ion-icon></a>
                     <span class="tooltiptext" style="font-size: 15px;">Accept Task</span>
                   </div>
                   <span class="prevent_select">|</span>
                   <div class="tooltip">
-                    <a th:href="@{/task_view/{taskId}/reject_hire/{userId}/{notificationId}(taskId=${notification.getTask()?.getId()}, userId=${notification.getRecipient()?.getId()}, notificationId=${notification.getId()})}"><ion-icon style=" cursor: pointer; " name="close-outline"></ion-icon></a>
+                    <a th:href="@{/task_view/{taskId}/reject_hire/{userId}/{notificationId}(taskId=${notification.getTask()?.getId()}, userId=${notification.getRecipient()?.getId()}, notificationId=${notification.getId()})}"><ion-icon class="icons" style=" cursor: pointer; " name="close-outline"></ion-icon></a>
                     <span class="tooltiptext" style="font-size: 15px;">Reject Task</span>
                   </div>
                 </div>
@@ -88,5 +97,12 @@
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
+<script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script><script  src="./script.js"></script>
+<script th:src="@{/js/application.js}" src="../static/js/application.js"></script>
+
+<script th:if="${hasNotificationDeleted != null and hasNotificationDeleted}">
+  window.onload = (event) => {createAlert('', 'Deleted Successfully!', 'The notification was deleted successfully.', 'success', true, true, 'pageMessages');}
+</script>
 </body>
 </html>
