--- a/src/main/resources/templates/task_view.html
+++ b/src/main/resources/templates/task_view.html
@@ -5,6 +5,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>View Task</title>
 
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
+
   <link rel="stylesheet" th:href="@{/css/application.css}" href="../static/css/application.css"/>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
@@ -212,7 +214,7 @@
     <div class="leftContent" style=" font-size: 20px; text-align: left; margin-left: 15px; ">
       <div>
         <h3 style=" font-size: 25px; " th:text="${task.getTitle()}">Title</h3>
-        <div sec:authorize="hasAnyAuthority('developer', 'admin')" style=" margin-left: 50px; margin-top: -20px; margin-bottom: 30px; ">
+        <div sec:authorize="hasAnyAuthority('developer', 'admin')" th:if="${logedInUserID != task.getCreator().getId()}" style=" margin-left: 50px; margin-top: -20px; margin-bottom: 30px; ">
           <div class="tooltip">
             <a th:href="@{/users/user_search/forward/{taskId}(taskId=${task.getId()})}"><ion-icon style=" cursor: pointer; font-size: 21px; " name="return-up-forward-outline"></ion-icon></a>
             <span class="tooltiptext" style="font-size: 15px;">Forward task</span>
@@ -303,6 +305,10 @@
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
+<script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script><script  src="./script.js"></script>
+<script th:src="@{/js/application.js}" src="../static/js/application.js"></script>
+
 <script th:inline="javascript">
   /*<![CDATA[*/
 
@@ -328,6 +334,22 @@
   }, 1000);
 
   /*]]>*/
+</script>
+
+<script th:if="${hireBidderUserHireRequestFail != null}">
+  window.onload = (event) => {createAlert('Opps!','You can not send hire request to the same user again', 'This Developer has already received your hire request.','danger',true,false,'pageMessages');}
+</script>
+
+<script th:if="${hasSendHireRequest != null and hasSendHireRequest}">
+  window.onload = (event) => {createAlert('', 'Hire Request Was Send!', 'Your hire request has reached the developer.', 'success', true, true, 'pageMessages');}
+</script>
+
+<script th:if="${hasAnotherAccepted != null and hasAnotherAccepted}">
+  window.onload = (event) => {createAlert('Opps!','The hire request has expired', 'Another Developer has already accepted the hire request to this task.','danger',true,false,'pageMessages');}
+</script>
+
+<script th:if="${hasBiddingEndedBeforeBid != null and hasBiddingEndedBeforeBid}">
+  window.onload = (event) => {createAlert('','','Bidding has ended.','warning',false,true,'pageMessages');}
 </script>
 
 </body>
