--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -61,7 +61,7 @@
 
 <div id="profile_picture" th:fragment="profile_picture(photoImagePath)">
     <div class="menu">
-        <img th:src="@{{path}(path=${photoImagePath})}" src="../static/images/Default%20Profile%20Image.png" class="real_photo" />
+        <img src="../static/images/Default%20Profile%20Image.png" class="real_photo" />
         <span class="menu_label">
             <ion-icon id="camera_icon" name="camera-outline" style=" margin-top: -500px; font-size: 30px; color: rgba(255, 255, 255, 1);"></ion-icon>
         </span>
