--- a/src/main/resources/templates/task_view.html
+++ b/src/main/resources/templates/task_view.html
@@ -239,7 +239,7 @@
       </div>
 
       <div style=" height: 5rem; width: 5rem; border-radius: 50%; display: inline-block;">
-          <img th:src="@{{path}(path=${task.getCreator()?.getPhotosImagePath()})}" src="../static/images/Default%20Profile%20Image.png" class="real_photo" style=" height: 5rem; display: inline-block; "/>
+          <img th:src="@{'data:image/jpeg;base64,'+ ${task.getCreator()?.generateBase64Image()}}" src="../static/images/Default%20Profile%20Image.png" class="real_photo" style=" height: 5rem; display: inline-block; "/>
       </div>
 
       <a th:href="@{/users/profile_view/{id}(id=${task.getCreator()?.getId()})}" href="#"><p th:text="${task.getCreator()?.getUsername()}" style=" margin: -45px 0px 50px 85px; ">thisIsAUsername</p></a>
@@ -257,7 +257,7 @@
 
   <div th:if="${task.showPrice}" style=" margin: 25px 20px 0px 20px; font-size: 15px; color: #ffffff" th:each="offer, iterStat: ${offers}">
     <div style=" height: 4.5rem; width: 4.5rem; border-radius: 50%; display: inline-block;">
-        <img th:src="@{{path}(path=${offer.getBidder()?.getPhotosImagePath()})}" src="../static/images/Default%20Profile%20Image.png" class="real_photo" style=" height: 5rem; display: inline-block; "/>
+        <img th:src="@{'data:image/jpeg;base64,'+ ${offer.getBidder()?.generateBase64Image()}}" src="../static/images/Default%20Profile%20Image.png" class="real_photo" style=" height: 5rem; display: inline-block; "/>
     </div>
 
     <p style=" margin: -60px 0px 50px 95px; " th:text="${offer.getBidder()?.getUsername()}">thisIsAnotherUsername</p>
@@ -282,7 +282,7 @@
     <div style="margin-left: 15px;">
 
       <div style=" height: 6rem; width: 6rem; border-radius: 50%; display: inline-block;">
-          <img th:src="@{{path}(path=${comment.getCommenter()?.getPhotosImagePath()})}" src="../static/images/Default%20Profile%20Image.png" class="real_photo" style=" height: 6rem; display: inline-block; "/>
+          <img th:src="@{'data:image/jpeg;base64,'+ ${comment.getCommenter()?.generateBase64Image()}}" src="../static/images/Default%20Profile%20Image.png" class="real_photo" style=" height: 6rem; display: inline-block; "/>
       </div>
 
       <p style=" margin: -75px 0px 50px 105px; " th:text="${comment.getCommenter()?.getUsername()}">totallyLegitUser</p>
