--- a/src/main/resources/templates/profile_view.html
+++ b/src/main/resources/templates/profile_view.html
@@ -5,6 +5,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>View Profile</title>
 
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
+
   <link rel="stylesheet" th:href="@{/css/application.css}" href="../static/css/application.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -76,15 +78,95 @@
       border: 1px solid white;
     }
 
-    #real_image {
-      margin-top: 50px;
-      height: 11rem;
-      width: 11rem;
-      border-radius: 50%;
-      display: inline-block;
-      background-repeat: no-repeat;
-      background-color: rgb(255, 255, 255, 1);
+    .overlay {
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: rgba(0, 0, 0, 0.7);
+      transition: opacity 500ms;
+      visibility: hidden;
+      opacity: 0;
+    }
+    .overlay:target {
+      visibility: visible;
       opacity: 1;
+    }
+    .popup {
+      margin: 70px auto;
+      padding: 20px;
+      background: rgb(51, 51, 51, 1);
+      border-radius: 5px;
+      width: 30%;
+      position: relative;
+      transition: all 5s ease-in-out;
+    }
+    .popup h2 {
+      margin-top: 0;
+      color: white;
+      font-family: 'Poppins',sans-serif;
+    }
+    .popup .close {
+      position: absolute;
+      top: 20px;
+      right: 30px;
+      transition: all 200ms;
+      font-size: 30px;
+      font-weight: bold;
+      text-decoration: none;
+      color: black;
+    }
+    .popup .close:hover {
+      color: rgb(255, 69, 0);
+    }
+    .popup .content {
+      max-height: 30%;
+      overflow: auto;
+      font-family: 'Poppins',sans-serif;
+    }
+    @media screen and (max-width: 700px){
+      .box{
+        width: 70%;
+      }
+      .popup{
+        width: 70%;
+      }
+    }
+    .change_input {
+      color: #FFFFFF;
+      outline: 0;
+      padding: 0.5rem 1.2rem;
+      margin-bottom: 20px;
+      margin-top: 5px;
+      border-radius: 0.8rem;
+      font-size: 20px;
+      background-color: rgba(255, 255, 255, 0.07);
+    }
+    .change_button {
+      width: 150px;
+      background-image: linear-gradient(92.88deg, #ff5914 9.16%, #ff3500 43.89%, #ff4500 64.72%);
+      border-radius: 8px;
+      border-style: none;
+      box-sizing: border-box;
+      color: rgb(255, 255, 255);
+      cursor: pointer;
+      flex-shrink: 0;
+      font-family: "Inter UI", "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,Ubuntu,Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+      font-size: 16px;
+      font-weight: 500;
+      height: 3rem;
+      padding: 0 1.6rem;
+      text-align: center;
+      text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
+      transition: all .5s;
+      user-select: none;
+      -webkit-user-select: none;
+      touch-action: manipulation;
+    }
+    .change_button:hover {
+      box-shadow: rgba(255, 53, 0, 0.5) 0 1px 30px;
+      transition-duration: .1s;
     }
   </style>
 </head>
@@ -120,7 +202,23 @@
 
           <div></div>
           <h5 th:text="${user.getUsername()}" style=" display: inline-block; margin-top: 5px; font-size: 20px; ">thisIsAUsername</h5>
-          <span style=" display: inline-block; margin-left: 5px; font-size: 23px;" th:if="${user.getUsername()} == ${logedInUsername}"><a th:href="@{/index}"><ion-icon name="create-outline"></ion-icon></a></span>
+          <span style=" display: inline-block; margin-left: 5px; font-size: 23px;" th:if="${user.getUsername()} == ${logedInUsername}">
+            <a href="#popup1"><ion-icon name="create-outline"></ion-icon></a>
+          </span>
+
+          <div id="popup1" class="overlay" tabindex="1000" style=" z-index: 9999; " th:if="${user.getUsername()} == ${logedInUsername}">
+            <form action="#" th:action="@{/users/profile_view/{userId}/change_username(userId=${logedInUserID})}" method="post">
+              <div class="popup">
+                <h2>Change Username</h2>
+                <a class="close" href="#">&times;</a>
+                <div class="content">
+                  <input class="change_input" type="text" placeholder="Username" name="username" maxlength="15" th:maxlength="15" required/>
+                </div>
+                <button class="change_button" type="submit">Change</button>
+              </div>
+            </form>
+          </div>
+
           <div>
             <span>[&nbsp;&nbsp;</span>
             <span class="user_roles" th:each="role, iterStat: ${user.getRoles()}" th:text="${iterStat.last} ? ${role.getName()} + '&nbsp;&nbsp;' : ${role.getName()} + ',&nbsp;'"></span>
@@ -129,7 +227,7 @@
           <div sec:authorize="hasAuthority('admin')" style=" margin-left: -15px; margin-bottom: 30px; ">
             <div class="tooltip" style=" margin-left: 15px;">
               <a th:href="@{/users/profile_view/{userId}/delete(userId=${user.getId()})}" style=" font-size: 21px; cursor: pointer; "><ion-icon name="trash-outline"></ion-icon></a>
-              <span class="tooltiptext" style="font-size: 15px;">Delete Task</span>
+              <span class="tooltiptext" style="font-size: 15px;">Delete User</span>
             </div>
           </div>
         </div>
@@ -139,7 +237,7 @@
         <div class="tasks">
           <h5 style=" font-size: 20px; margin-bottom: -2px; ">Tasks</h5>
           <table id="task_table">
-            <tr class ="task_tr" th:each="task: ${tasks}">
+            <tr class ="task_tr" th:each="task: ${tasks}" th:if="${task.isPublic() or task.creator.getId() == logedInUserID}">
               <td class="task_td">
                 <a th:href="@{/task_view/{type}(type=${task.getId()})}" href="task_view.html" style=" text-decoration: none; ">
                   <div>
@@ -272,6 +370,10 @@
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
+<script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script><script  src="./script.js"></script>
+<script th:src="@{/js/application.js}" src="../static/js/application.js"></script>
+
 <script th:inline="javascript">
   /*<![CDATA[*/
 
@@ -326,6 +428,10 @@
     document.getElementById("input_file").click();
   }
   /*]]>*/
+</script>
+
+<script th:if="${cantChange != null}">
+  window.onload = (event) => {createAlert('Opps!','Could not change username', 'It seems like the new username is taken by another user.','danger',true,false,'pageMessages');}
 </script>
 
 </body>
